--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vebinar - Zarina Ismoilovna</title>
+    <title>VEBINAR - AZIZBEK KHABIBULLAEV</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Unbounded:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -20,9 +20,9 @@
             <div class="header-wrapper">
                 <div class="webinar-date">
                     <div class="webinar-date-date">
-                        6-mart 20:30
+                        19-20-aprel
                     </div>
-                    <div class="webinar-date-title">Boshlanish vaqti</div>
+                    <div class="webinar-date-title">Soat 20:00</div>
                 </div>
             </div>
         </div>
@@ -31,13 +31,11 @@
     <div class="webinar-main">
         <div class="container">
             <div class="webinar-main-content">
-                <div class="webinar-title">
-                    Bepul online webinar
-                </div>
 
                 <div class="webinar-main-info">
                     <h2 class="webinar-main-title">
-                        <span>Rus tilida</span> 0 dan gapirishgacha qadamlar
+                        DASTURLASHDA 0 <br> DAN
+                        <span>NATIJAGACHA</span>
                     </h2>
 
                     <div class="desktop-elements">
@@ -47,25 +45,33 @@
                                     <img src="img/check.svg" alt="check icon">
                                 </div>
 
-                                <p class="webinar-main-text">Rus tilini 0 dan samarali o'rganish strategiyalarini</p>
+                                <p class="webinar-main-text">Dasturlashni 0 dan samarali o’rganish qadamlari</p>
                             </li>
                             <li class="webinar-main-li">
                                 <div class="webinar-main-disc">
                                     <img src="img/check.svg" alt="check icon">
                                 </div>
 
-                                <p class="webinar-main-text">Rus tili gramatikasi va muloqot qilishni rivojlantirish uslublari</p>
+                                <p class="webinar-main-text">Dasturlashda 1000$ daromadga chiqish ketma-ketliklari</p>
                             </li>
                             <li class="webinar-main-li">
                                 <div class="webinar-main-disc">
                                     <img src="img/check.svg" alt="check icon">
                                 </div>
 
-                                <p class="webinar-main-text">Rus tilida qisqa vaqtda so'z yodlamasdan natijaga chiqish uslublari</p>
+                                <p class="webinar-main-text">Dasturlashda ishga kirish uslublari</p>
                             </li>
                         </ul>
 
-                        <button class="webinar-main-button">JOY BAND QILISH</button>
+                        <div class="webinar-book-place">
+                            <button class="webinar-main-button">JOY BAND QILISH</button>
+
+                            <div class="webinar-price">
+                                <del>200.000 so'm</del>
+                                <strong>BEPUL</strong>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -76,38 +82,41 @@
 
             <div class="mobile-mentor-inner">
                 <button class="webinar-main-button">JOY BAND QILISH</button>
+                <div class="mobile-price">
+                    <del>200.000 so'm</del>
+                    <strong>BEPUL</strong>
+                </div>
                 <ul class="webinar-main-ul">
                     <li class="webinar-main-li">
                         <div class="webinar-main-disc">
                             <img src="img/check.svg" alt="check icon">
                         </div>
 
-                        <p class="webinar-main-text">Rus tilini 0 dan samarali o'rganish strategiyalarini</p>
+                        <p class="webinar-main-text">Dasturlashni 0 dan samarali o’rganish qadamlari</p>
                     </li>
                     <li class="webinar-main-li">
                         <div class="webinar-main-disc">
                             <img src="img/check.svg" alt="check icon">
                         </div>
 
-                        <p class="webinar-main-text">Rus tili gramatikasi va muloqot qilishni rivojlantirish uslublari</p>
+                        <p class="webinar-main-text">Dasturlashda 1000$ daromadga chiqish ketma-ketliklari</p>
                     </li>
                     <li class="webinar-main-li">
                         <div class="webinar-main-disc">
                             <img src="img/check.svg" alt="check icon">
                         </div>
 
-                        <p class="webinar-main-text">Rus tilida qisqa vaqtda so'z yodlamasdan natijaga chiqish uslublari</p>
+                        <p class="webinar-main-text">Dasturlashda ishga kirish uslublari</p>
                     </li>
                 </ul>
             </div>
-
         </div>
     </div>
 </div>
 
 <div class="modal-backdrop" data-modal-close>
     <form class="modal-content form">
-        <h2 class="form-heading">Ro'yxatdan <span>o'tish</span></h2>
+        <h2 class="form-heading">Joy band qilish</h2>
 
         <div class="form-alert"></div>
 
@@ -122,7 +131,7 @@
         </label>
 
         <button class="form-button" type="submit">
-            Ro'yxatdan o'tish
+            Yuborish
         </button>
 
         <img data-modal-close class="form-close" src="img/x.svg" alt="close icon">
