--- a/public/telegram.html
+++ b/public/telegram.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vebinar - Zarina Ismoilovna</title>
+    <title>VEBINAR - AZIZBEK KHABIBULLAEV</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Unbounded:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -20,9 +20,9 @@
             <div class="header-wrapper">
                 <div class="webinar-date">
                     <div class="webinar-date-date">
-                        6-mart 20:30
+                        19-20-aprel
                     </div>
-                    <div class="webinar-date-title">Boshlanish vaqti</div>
+                    <div class="webinar-date-title">Soat 20:00</div>
                 </div>
             </div>
         </div>
@@ -33,11 +33,11 @@
             <div class="webinar-main-content">
                 <div class="webinar-main-info">
                     <h2 class="webinar-main-title">
-                        So’ngi <span>qadam...</span>
+                        Webinarda qatnashish uchun, yopiq <span>telegram kanalimizga</span> obuna bo'ling!
                     </h2>
 
                     <h2 class="webinar-main-title--telegram">
-                        Webinarda qatnashish uchun, yopiq telegram kanalimizga obuna bo’ling!
+                        Ochiq darsda qatnashish uchun, yopiq telegram kanalimizga obuna bo’ling!
                     </h2>
 
                     <div>
@@ -45,10 +45,8 @@
                     </div>
 
 
-                    <a class="webinar-telegram-button" href="https://t.me/+wqSlWkUGVIkyNDYy">
-                        <img src="img/telegram.svg" alt="telegram icon">
-
-                        <span>Obuna bo'lish</span>
+                    <a class="webinar-telegram-button" href="https://t.me/+1gCRyjqivNIzMDky">
+                        <span>OBUNA BO'LISH</span>
                     </a>
                 </div>
             </div>
