--- a/public/telegram.html
+++ b/public/telegram.html
@@ -33,7 +33,7 @@
             <div class="webinar-main-content">
                 <div class="webinar-main-info">
                     <h2 class="webinar-main-title">
-                        Webinarda qatnashish uchun, yopiq <span>telegram kanalimizga</span> obuna bo'ling!
+                        Webinarda qatnashish uchun, yopiq <strong>telegram kanalimizga</strong> obuna bo'ling!
                     </h2>
 
                     <div>
@@ -42,7 +42,8 @@
 
 
                     <a class="webinar-telegram-button" href="https://t.me/+1gCRyjqivNIzMDky">
-                        <span>OBUNA BO'LISH</span>
+                        <img src="img/telegram.svg" alt="">
+                        <span>Obuna bo'lish</span>
                     </a>
                 </div>
             </div>
