--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
             <div class="header-wrapper">
                 <div class="webinar-date">
                     <div class="webinar-date-date">
-                        19-20-aprel
+                        19-20-noyabr
                     </div>
-                    <div class="webinar-date-title">Soat 21:00</div>
+                    <div class="webinar-date-title">Soat 20:30</div>
                 </div>
             </div>
         </div>
