--- a/public/telegram.html
+++ b/public/telegram.html
@@ -19,10 +19,10 @@
         <div class="container">
             <div class="header-wrapper">
                 <div class="webinar-date">
-                    <div class="webinar-date-date">
-                        19-20-aprel
+                     <div class="webinar-date-date">
+                        19-20-noyabr
                     </div>
-                    <div class="webinar-date-title">Soat 21:00</div>
+                    <div class="webinar-date-title">Soat 20:30</div>
                 </div>
             </div>
         </div>
