--- a/public/telegram.html
+++ b/public/telegram.html
@@ -40,7 +40,7 @@
                     </div>
 
 
-                    <a class="webinar-telegram-button" href="https://t.me/+1gCRyjqivNIzMDky">
+                    <a class="webinar-telegram-button" href="https://t.me/+QTLZnwvRg-I2NWMy">
                         <img src="img/telegram.svg" alt="">
                         <span>Obuna bo'lish</span>
                     </a>
