--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script async>
+        location.href = "https://www.youtube.com/live/4NKbtReajp0"
+    </script>
 </head>
 <body>
 <div class="webinar">
