--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script async>
-        location.href = "https://www.youtube.com/live/4NKbtReajp0"
-    </script>
-
 </head>
 <body>
 <div class="webinar">
@@ -23,7 +19,7 @@
             <div class="header-wrapper">
                 <div class="webinar-date">
                     <div class="webinar-date-date">
-                        19-20-noyabr
+                        28-29-yanvar
                     </div>
                     <div class="webinar-date-title">Soat 20:30</div>
                 </div>
