--- a/public/telegram.html
+++ b/public/telegram.html
@@ -19,7 +19,7 @@
             <div class="header-wrapper">
                 <div class="webinar-date">
                      <div class="webinar-date-date">
-                        19-20-noyabr
+                         28-29-yanvar
                     </div>
                     <div class="webinar-date-title">Soat 20:30</div>
                 </div>
@@ -40,7 +40,7 @@
                     </div>
 
 
-                    <a class="webinar-telegram-button" href="https://t.me/+QTLZnwvRg-I2NWMy">
+                    <a class="webinar-telegram-button" href="https://t.me/+13bwW_bpQzo3NjEy">
                         <img src="img/telegram.svg" alt="">
                         <span>Obuna bo'lish</span>
                     </a>
